--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Events#index</h1>
-<p>Find me in app/views/events/index.html.erb</p>
+
+<div class ="container-fluid">
+	<div class="row">
+		<div id="logo" class="col-md-12">Events</div>
+	</div>
+</div>
+
+
+<div class="container-fluid content">
+	<% @events.each do |event| %>
+	<div class="row row_events">
+		<div class="column1 col-date col-sm-1 col-xs-1 col-md-1">
+			<div class="col-md-12"><%= month_converter(event.date) %></div>
+			<div class="date col-md-12 side"><%= day_converter(event.date) %></div>
+			<div class="col-md-12"><%= weekday_converter(event.date) %></div>
+		</div>
+		<div class="col-sm-10 col-xs-10 col-md-10">
+			<ul>
+				<li class="event_header"><%= link_to event.name, event_path(event) %></li>
+				<li class="event_date"><%= date_converter(event.date) %></li>
+				<li><%= event.venue %> <%= event.city %></li>
+			</ul>
+		</div>
+		<div class="col-xs-1 col-sm-1 col-md-1">
+			<i class="glyphicon glyphicon-star-empty"></i>
+		</div>
+	</div>
+	<% end %>
+</div>
