toggle star to change color when clicked

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -31,7 +31,7 @@ ul {
 }
 
 .event_header {
-	font-size: 1em;
+	font-size: 1.500em;
 	font-weight: 500;
 }
 
@@ -51,17 +51,18 @@ ul {
 	padding: 10px 0px;
 }
 
-.glyphicon-star-empty:hover {
-	color: yellow;
-	font-size: 2em;
-}
+
 
 .glyphicon-star-empty {
 	color: black;
 	font-size: 2em;
 	padding-right: 5px;
 	margin-left: -20px;
-	
+}
+
+.yellow {
+	color: yellow;
+	font-size: 2em;
 }
 
 
