Refactor seeder function into application controller

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,10 +5,8 @@
 	</div>
 </div>
 
-<div>
+<div id="favorite_link">
 		<%= link_to 'Favorite',  favorite_path %>
-
-
 </div>
 
 <div class="container-fluid content">
