--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -84,5 +84,13 @@ ul {
 	font-size: 2em;
 }
 
+#favorite_link {
+	padding-right: 10px;
+	padding-top: 10px;
+	width: 100%;
+	text-align: right;
+	font-size: 1.25em;
+}
+
 
 
