--- a/app/views/events/accordian.html.erb
+++ b/app/views/events/accordian.html.erb
@@ -9,30 +9,34 @@
 		<%= link_to 'Favorite',  favorite_path %>
 </div>
 
-<div class="container-fluid content">
-	<% @events.each do |event| %>
-	<div class="row row_events">
-		<div class="column1 col-date col-sm-1 col-xs-2 col-md-1">
-			<div class="col-md-12"><%= month_converter(event.date).upcase %></div>
-			<div class="date col-md-12 side"><%= day_converter(event.date) %></div>
-			<div class="col-md-12"><%= weekday_converter(event.date).upcase %></div>
-		</div>
 
-		<div class="col-sm-10 col-xs-8 col-md-10">
-			<ul>
-				<li class="event_header"><%= link_to event.name, event_path(event) %></li>
-				<li class="event_date"><%= date_converter(event.date) %></li>
-				<li><%= event.venue %> <%= event.city %></li>
-			</ul>
-		</div>
+<button type="button" class="btn btn-danger" data-toggle="collapse" data-target="#demo">
+  simple collapsible
+</button>
 
-		<div class="col-xs-2 col-sm-1 col-md-1">
-			<i class="glyphicon glyphicon-star index" onclick = "checkCookie(<%= event.id %> )"></i>
-		</div>
+<div id="demo" class="collapsing">Test</div>
 
-	</div>
-	<% end %>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <script>
 	$(".glyphicon-star.index").click(function(){
