--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,7 +2,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<h3>Access Fuel</h3>
+				<h2>Access Fuel</h2>
 				<h5>How can we help fuel your success?</h5>
 			</div>
 		</div>
@@ -10,14 +10,10 @@
 </nav>
 
 <article>
-	<div class="container-fluid" style="height: 300px; background-color: black">
-		<div class="row">
-			<div class="col-md-12 text-center">
-			</div>
-		</div>
-	</div>
-</article>
+	<%= render 'carousel' %>
 
+</article>
+	
 
 <article>
 	<div class="container-fluid content">
