make mobile view no zoom

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
   <%= csrf_meta_tags %>
 
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0" />  
+
+
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   
 </head>
