Add accordian to events page

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -101,6 +101,11 @@ ul {
 	font-size: 1.25em;
 }
 
+button#button_down {
+	background-color: transparent;
+	border: none;
+}
+
 @media only screen and (max-width: 500px) {
 	.container-fluid, section {
 		width: 100%;
