--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -36,7 +36,19 @@
 		</div>
 	</div>
 
+	<div class="row row_data text-center">
+		<div class="col-md-12">
+			<button id="button_down" type="button" data-toggle="collapse" data-target="#data<%=event.id%>">
+			  <i class="glyphicon glyphicon-chevron-down"></i>
+			</button>
+		</div>
+	</div>
 
+	<div class="collapsing row" id="data<%=event.id%>">
+		<div class="col-md-12">
+			<%= truncate(strip_tags(event.description), length: 200, separator: ' ') { link_to "More", event_path(event) }%>
+		</div>
+	</div>
 
 	<% end %>
 </div>
