--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -31,16 +31,35 @@ $maincolor: lighten(#ccc, 40%);
 	background-color: #ccc;
 }
 
-#logo {
-	font-size: 3em;
-	text-align: center;
-	font-weight: bold;
+nav {
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
 	background-color: #ccc;
-	padding: 25px 0;
 	margin-bottom: 25px;
+	vertical-align: text-bottom;
 }
+
+#header {
+	text-align: center;
+	font-weight: bold;	
+	font-size: 3em;
+}
+
+#favorite_link {
+	padding-top: 25px;
+	text-align: right;
+	font-size: 1.25em;
+	padding-right: 50px;
+}
+
+.glyphicon-picture {
+	font-size: 3.5em;
+	/*padding-top: 5px;*/
+	padding-left: 5px;
+}
+
+
+
 
 ul {
 	list-style-type: none;
@@ -100,13 +119,7 @@ ul {
 	font-size: 2em;
 }
 
-#favorite_link {
-	padding-right: 10px;
-	padding-top: 10px;
-	width: 100%;
-	text-align: right;
-	font-size: 1.25em;
-}
+
 
 button#button_down {
 	background-color: transparent;
@@ -140,7 +153,14 @@ button#button_down {
 		padding-left: 10px;
 	}
 
+	#favorite_link {
+	font-size: 1.25em;
+	padding-right: 25px;
+	}
+
+	.glyphicon-picture {
+	font-size: 3.5em;
+	padding-left: 20px;
+	}
 }
-
-
 
