--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,13 +1,10 @@
 <nav>
 	<div class ="container-fluid">
 		<div class="row">
-			<div id="logo" class="col-md-12">Events</div>
+			<div id="logo" class="col-md-3 col-sm-3 col-xs-4 glyphicon glyphicon-picture"></div>
+			<div id="header" class="col-md-6 col-sm-6 col-xs-4">Events</div>
+			<div id="favorite_link" class="col-md-3 col-sm-3 col-xs-4"><%= link_to 'Favorite',  favorite_path %></div>
 		</div>
-
-		<div class="row" id="favorite_link">
-			<%= link_to 'Favorite',  favorite_path %>
-		</div>
-
 	</div>
 </nav>
 
