--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -35,7 +35,7 @@ nav {
 	border-top: 1px solid black;
 	border-bottom: 1px solid black;
 	background-color: #ccc;
-	margin-bottom: 25px;
+	/*margin-bottom: 25px;*/
 	vertical-align: text-bottom;
 }
 
