add nav bar to favorite page

--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -1,4 +1,12 @@
-<h1>Favorites</h1>
+<nav>
+	<div class ="container-fluid">
+		<div class="row">
+			<div id="logo" class="col-md-3 col-sm-3 col-xs-4 glyphicon glyphicon-picture"></div>
+			<div id="header" class="col-md-6 col-sm-6 col-xs-4">Events</div>
+			<div id="favorite_link" class="col-md-3 col-sm-3 col-xs-4"><%= link_to 'Favorite',  favorite_path %></div>
+		</div>
+	</div>
+</nav>
 
 <div class="container-fluid content">
 	<% @events.each do |event| %>
@@ -25,11 +33,7 @@
 </div>
 
 
-// <script>
-// 	$(".glyphicon-star").click(function(){
-// 		$(".favorite").toggleClass('black');
-// 		});
-// </script>
+
 
 
 
