Fix responsive nav

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -43,6 +43,7 @@ nav {
 	text-align: center;
 	font-weight: bold;	
 	font-size: 3em;
+	padding-top: 5px;
 }
 
 #header a {
@@ -167,16 +168,18 @@ button#button_down {
 
 	#favorite_link {
 	font-size: 1.25em;
-	padding-right: 25px;
+	padding-right: 30px;
 	}
 
 	.glyphicon-picture {
-	font-size: 3.5em;
+	font-size: 3em;
 	padding-left: 20px;
+	padding-top: 5px;
 	}
 
 	#header {
 		font-size: 2em;
+		padding-top: 13px;
 	}
 
 }
