--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div id="logo" class="col-md-3 col-sm-3 col-xs-4"><a href="../welcome.html"><span class = "glyphicon glyphicon-picture"</span></a></div>
 			<div id="header" class="col-md-6 col-sm-6 col-xs-4">Events</div>
-			<div id="favorite_link" class="col-md-3 col-sm-3 col-xs-4"><%= link_to 'Favorite',  favorite_path %></div>
+			<div id="favorite_link_events" class="col-md-3 col-sm-3 col-xs-4"><%= link_to 'Favorite',  favorite_path, :class => 'fav_events' %></div>
 		</div>
 	</div>
 </nav>
