--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,6 +10,25 @@
 		padding-right: 5px;	
 	}
 
+/*	nav {
+		height: 200px;
+		width: 100%;
+
+	}
+
+	#logo {
+		height: 95%;
+		width: 100%;
+		border-top: 1px solid black;
+		border-bottom: 1px solid black;
+		background-image: url("Logo_final.png") no-repeat center fixed;
+		-webkit-background-size: cover;
+	  -moz-background-size: cover;
+	  -o-background-size: cover;
+  		background-size: cover;	
+
+	}*/
+
 </style>
 
 
@@ -17,8 +36,8 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<h2>Access Fuel</h2>
-				<h5>How can we help fuel your success?</h5>
+				<div id="logo"><img src="../../images/Logo_final.png" height="200px" width="100%">
+				</div>
 			</div>
 		</div>
 	</div>
