--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,7 +3,7 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-12" style="padding:0px">
-				<div><img id="logo"></div>
+				<div><img id="home_logo"></div>
 			</div>
 		</div>
 	</div>
