--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -14,7 +14,7 @@ $maincolor: lighten(#ccc, 40%);
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: center top;
-	margin: 0px 5px;	
+	/*margin: 0px 5px;	*/
 }
 
 
