--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,9 @@
 <nav>
 	<div class ="container-fluid">
 		<div class="row">
-			<div id="logo" class="col-md-3 col-sm-3 col-xs-4"><a href="../welcome.html"><span class = "glyphicon glyphicon-picture"</span></a></div>
-			<div id="header" class="col-md-6 col-sm-6 col-xs-4">Events</div>
-			<div id="favorite_link_events" class="col-md-3 col-sm-3 col-xs-4"><%= link_to 'Favorite',  favorite_path, :class => 'fav_events' %></div>
+			<div id="icon" class="col-md-3 col-sm-3 col-xs-3"><a href="../welcome.html"><img id = "icon_image"/></a></div>
+			<div id="header" class="col-md-6 col-sm-6 col-xs-6">Events</div>
+			<div id="favorite_link_events" class="col-md-3 col-sm-3 col-xs-3"><%= link_to 'Favorite',  favorite_path, :class => 'fav_events' %></div>
 		</div>
 	</div>
 </nav>
