--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -86,13 +86,20 @@ $maincolor: lighten(#ccc, 40%);
 	color: black;
 	}*/
 
-.glyphicon-picture {
-	font-size: 3.5em;
-	/*padding-top: 5px;*/
-	padding-left: 5px;
+
+#icon{
+	padding-top: 5px;
+	background-image: url("Icon_final.jpg");
+	padding-left: 10px;
+	height: 75px;
+	width: 75px;
+	background-size: cover;
+	margin-left: 15px;
+	margin-top: 5px;
+
 }
 
-.glyphicon-picture a:hover {
+#icon a:hover {
 	color:none;
 }
 
@@ -122,22 +129,6 @@ ul {
 
 .row_events {
 	padding-top: 10px;
-}
-
-
-
-/*.glyphicon-star-empty {
-	color: black;
-	font-size: 2em;
-	padding-right: 5px;
-	margin-left: -20px;
-}*/
-
-.glyphicon-star.index{
-	/*color: black;*/
-	font-size: 2em;
-	padding-right: 5px;
-	margin-left: -20px;
 }
 
 .glyphicon-star.favorite{
@@ -204,7 +195,7 @@ button#button_down {
 
 	#favorite_link_events{
 		font-size: 1.75em;
-		padding-right: 30px;
+		padding-right: 20px;
 		padding-top: 15px;
 	}
 
@@ -215,21 +206,16 @@ button#button_down {
 		padding-top: 15px;
 	}
 
-	.glyphicon-picture {
-	font-size: 3em;
-	padding-left: 20px;
-	padding-top: 5px;
+	#icon {
+		padding-left: 25px;
+		padding-top: 5px;
+		width: 50px;
+		height: 50px;
 	}
 
 	#header {
 		font-size: 2em;
 		padding-top: 13px;
 	}
-
-/*	#logo {
-		height: 150px;
-	}*/
-
-
 }
 
