--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -1,8 +1,8 @@
 <nav>
 	<div class ="container-fluid">
 		<div class="row">
-			<div id="logo" class="col-md-3 col-sm-3 col-xs-4"><a href="../welcome.html"><span class = "glyphicon glyphicon-picture"</span></a></div>
-			<div id="header" class="col-md-6 col-sm-6 col-xs-4"><%= link_to 'Events', events_path %></div>
+			<div id="icon" class="col-md-3 col-sm-3 col-xs-3"><a href="../welcome.html"><img id = "icon_image"></a></div>
+			<div id="header" class="col-md-6 col-sm-6 col-xs-6"><%= link_to 'Events', events_path %></div>
 			<div id="favorite_link_page" class="col-md-3 col-sm-3 col-xs-4">Favorites</div>
 		</div>
 	</div>
