--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -138,6 +138,12 @@ ul {
 	margin-left: -20px;
 }
 
+.glyphicon-star.index{
+	font-size: 2em;
+/*	padding-right: 5px;
+	margin-left: -20px;*/
+}
+
 .yellow {
 	color: yellow;
 	font-size: 2em;
