--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,8 +2,8 @@
 	<div class ="container-fluid">
 		<div class="row">
 			<div id="icon" class="col-md-2 col-sm-2 col-xs-3"><a href="../welcome.html"><img id = "icon_image"/></a></div>
-			<div id="header" class="col-md-8 col-sm-5 col-xs-6">Events</div>
-			<div id="favorite_link_events" class="col-md-2 col-sm-5 col-xs-3"><%= link_to 'Favorites',  favorite_path, :class => 'fav_events' %></div>
+			<div id="header" class="col-md-8 col-sm-8 col-xs-6">Events</div>
+			<div id="favorite_link_events" class="col-md-2 col-sm-2 col-xs-3"><%= link_to 'Favorite',  favorite_path, :class => 'fav_events' %></div>
 		</div>
 	</div>
 </nav>
