--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -67,7 +67,8 @@ $maincolor: lighten(#ccc, 40%);
 	font-size: 2.5em;
 	padding-top: 10px;
 	font-weight: bold;
-
+	/*margin-left: 5%;*/
+	float:right;
 }
 
 #favorite_link_events {
@@ -75,6 +76,7 @@ $maincolor: lighten(#ccc, 40%);
 	font-size: 2.5em;
 	padding-top: 10px;
 	font-weight: bold;
+	margin-left: 5%;
 }
 
 
@@ -203,6 +205,7 @@ button#button_down {
 		font-size: 1.75em;
 		padding-right: 20px;
 		padding-top: 15px;
+		/*margin-left: 0px;*/
 	}
 
 
