add flash error message for favorites when user has not ever saved any favorites

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,11 @@
   
 </head>
 <body>
-
+<% flash.each do |name, msg| -%>
+      <%= content_tag :div, msg, class: name %>
+    <% end -%>
 <%= yield %>
 
 </body>
 </html>
+
