Add media queries for mobile devices

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -55,6 +55,22 @@
 		#find_events_link {
 			text-align: center;
 		}
+
+		#santa_monica_image {
+			background-image: url('https://launchrock-assets.s3.amazonaws.com/background-files/8EZADCXZ_1396659538110.png');
+			height: 150px;
+		}
+
+		#logo_name {
+			color: white;
+			font-size: 2em;
+			padding-top: 50px;
+			margin: 0px;
+		}
+
+			#header_text {
+			font-size: 2em;
+		}
 	}
 
 </style>
