--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -50,6 +50,8 @@
 		#article_text  {
 			text-align: center;
 			padding-top: 1em;
+			margin-left: 5px;
+			margin-right: 5px;
 		}
 
 		#find_events_link {
@@ -68,8 +70,10 @@
 			margin: 0px;
 		}
 
-			#header_text {
+		#header_text {
 			font-size: 2em;
+			margin-left: 5px;
+			margin-right: 5px;
 		}
 	}
 
