Add find event button to home page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -56,6 +56,11 @@
 	<% end %>
 </div>
 
+
+<!-- <div id="dialog" title="Basic dialog">
+  <p>This is the default dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the 'x' icon.</p>
+</div> -->
+
 <script>
 $(".glyphicon-star.index").click(function(){
 	$(this).toggleClass('yellow');
@@ -66,7 +71,14 @@ $(".glyphicon-star.index").click(function(){
 <script>
 	addYellowClass();
 </script>
+
+ <script>
+  $(function() {
+    $( "#dialog" ).dialog({autoOpen: true});
+  });
+ </script>
 		
+
 
 
 
