--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,16 +1,16 @@
 <nav>
 	<div class ="container-fluid">
-		<div class="row">
+		<div class="row header_row">
 			<div id="icon" class="col-md-2 col-sm-2 col-xs-3"><a href="../welcome.html"><img id = "icon_image"/></a></div>
 			<div id="header" class="col-md-6 col-sm-8 col-xs-6">Events</div>
-			<div id="favorite_link_events" class="col-md-4 col-sm-2 col-xs-3"><%= link_to 'Favorite',  favorite_path, :class => 'fav_events' %></div>
+			<div id="favorite_link_events" class="col-md-4 col-sm-2 col-xs-3"><%= link_to 'Favorite',  favorite_path, :class => 'fav_events' %>
+			</div>
 		</div>
 
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p><%= link_to 'Help us improve AF... we want your feedback!', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', class: "survey_link", target: "_blank" %></p>
-
-				
+				<p><%= link_to 'Help us improve AF... we want your feedback!', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', class: "survey_link", target: "_blank" %>
+				</p>
 			</div>
 		</div>
 	</div>
