--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,7 +9,7 @@
 
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p><%= link_to 'Help us improve AF... we want your feedback!', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', class: "survey_link", target: "_blank" %>
+				<p id="survey"><%= link_to 'Help us improve AF... we want your feedback!', 'https://accessfuel.wufoo.com/forms/prototype-feedback-from-awesome-fuelers/', class: "survey_link", target: "_blank" %>
 				</p>
 			</div>
 		</div>
