--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -17,7 +17,6 @@ $maincolor: lighten(#ccc, 40%);
 	background-repeat: no-repeat;
 	background-size: contain;
 	background-position: center top;
-	/*margin: 0px 5px;	*/
 }
 
 .survey_link {
@@ -29,22 +28,8 @@ $maincolor: lighten(#ccc, 40%);
 	border-radius: 5px;
 }
 
-/*	.events_link {
-		font-size: 2.5em;
-		background-color: orange;
-		color: white;
-		border-radius: 10px;
-		padding: 10px;
-		font-weight: 500;
-	}
-
-	a.events_link:hover {
-			text-decoration: none;
-	
-	}*/
 
 .survey_link:hover{
-	/*background-color: blue;*/
 	color: white;
 	text-decoration: none;
 }
@@ -100,7 +85,6 @@ $maincolor: lighten(#ccc, 40%);
 	font-size: 2.5em;
 	padding-top: 10px;
 	font-weight: bold;
-	/*margin-left: 5%;*/
 	float:right;
 }
 
@@ -129,8 +113,6 @@ $maincolor: lighten(#ccc, 40%);
 }
 
 
-
-
 ul {
 	list-style-type: none;
 }
@@ -139,7 +121,6 @@ ul {
 	font-size: 1.25em;
 	font-weight: 500;
 }
-
 
 
 .date {
@@ -165,8 +146,6 @@ ul {
 
 .glyphicon-star.index{
 	font-size: 2em;
-/*	padding-right: 5px;
-	margin-left: -20px;*/
 }
 
 .yellow {
@@ -198,11 +177,13 @@ button#button_down {
 }
 
 @media only screen and (max-width: 540px) {
+
 	.container-fluid, section {
 		width: 100%;
 		padding: 0px 0px !important;
 	}
-	.glyphicon-star.index{
+
+	.glyphicon-star.index {
 		padding-right: 0px;
 		margin-left: 0px;
 		font-size: 1.5em;
@@ -251,7 +232,7 @@ button#button_down {
 	}
 
 	#survey {
-		margin-top: 10px;l
+		margin-top: 10px;
 	}
 
 	.survey_link {
