Fix spelling mistakes on event page

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="row header_row">
 			<div id="icon" class="col-md-2 col-sm-2 col-xs-3"><a href="../welcome.html"><img id = "icon_image"/></a></div>
 			<div id="header" class="col-md-6 col-sm-8 col-xs-6">Events</div>
-			<div id="favorite_link_events" class="col-md-4 col-sm-2 col-xs-3"><%= link_to 'Favorite',  favorite_path, :class => 'fav_events' %>
+			<div id="favorite_link_events" class="col-md-4 col-sm-2 col-xs-3"><%= link_to 'Favorites',  favorite_path, :class => 'fav_events' %>
 			</div>
 		</div>
 
