--- a/app/views/events/favorite.html.erb
+++ b/app/views/events/favorite.html.erb
@@ -11,13 +11,13 @@
 <div class="container-fluid content">
 	<% @events.each do |event| %>
 	<div class="row row_events">
-		<div class="column1 col-date col-sm-1 col-xs-2 col-md-1">
+		<div class="column1 col-date col-md-1 col-sm-1 col-xs-1">
 			<div class="col-md-12"><%= month_converter(event.date).upcase %></div>
 			<div class="date col-md-12 side"><%= day_converter(event.date) %></div>
 			<div class="col-md-12"><%= weekday_converter(event.date).upcase %></div>
 		</div>
 
-		<div class="col-sm-10 col-xs-8 col-md-10">
+		<div class="col-md-10 col-sm-8 col-xs-8">
 			<ul>
 				<li class="event_header"><%= link_to event.name, event_path(event) %></li>
 				<li class="event_date"><%= date_converter(event.date) %></li>
@@ -25,7 +25,7 @@
 			</ul>
 		</div>
 
-		<div class="col-xs- col-sm-1 col-md-1">
+		<div class="col-md-1 col-sm-1 col-xs-2">
 			<i class="glyphicon glyphicon-star favorite"></i>
 		</div>
 	</div>
