--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -2,8 +2,8 @@
 	<div class ="container-fluid">
 		<div class="row header_row">
 			<div id="icon" class="col-md-2 col-sm-2 col-xs-3"><a href="../welcome.html"><img id = "icon_image"/></a></div>
-			<div id="header" class="col-md-6 col-sm-8 col-xs-6">Events</div>
-			<div id="favorite_link_events" class="col-md-4 col-sm-2 col-xs-3"><%= link_to 'Favorites',  favorite_path, :class => 'fav_events' %>
+			<div id="header" class="col-md-6 col-sm-8 col-xs-4">Events</div>
+			<div id="favorite_link_events" class="col-md-4 col-sm-2 col-xs-5"><%= link_to 'Favorites',  favorite_path, :class => 'fav_events' %>
 			</div>
 		</div>
 
@@ -20,13 +20,13 @@
 	<% @events.each do |event| %>
 	<div class="row row_events">
 
-		<div class="column1 col-date col-md-1 col-sm-1 col-xs-2">
+		<div class="column1 col-date col-md-1 col-sm-1 col-xs-1">
 			<div class="col-md-12"><%= month_converter(event.date).upcase %></div>
 			<div class="date col-md-12 side"><%= day_converter(event.date) %></div>
 			<div class="col-md-12"><%= weekday_converter(event.date).upcase %></div>
 		</div>
 
-		<div class="col-sm-10 col-xs-8 col-md-10">
+		<div class="col-md-10 col-sm-8 col-xs-8 ">
 			<ul>
 				<li class="event_header"><%= link_to event.name, event_path(event) %></li>
 				<li class="event_date"><%= date_converter(event.date) %></li>
